# seibi

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix  result
src/: app_sync.rs  argocd_sync.rs  attic_push.rs  auto_unlock.rs  backup.rs  blocklist.rs  bootstrap.rs  claude_vm_prune.rs  cluster_init.rs  cluster_launch.rs  cluster_secrets.rs  common.rs  ddns.rs  deploy_secret.rs  direnv_prune.rs  disk_facts.rs  disk_pressure.rs  helm_auth.rs  kubeconfig.rs  kubeconfig_direct.rs  kubeconfig_rename.rs  main.rs  metrics.rs  monitor.rs  nic_tune.rs  nix_gc.rs  notify.rs  pki_bootstrap.rs  podman_prune.rs  probe.rs  reconverge.rs  rust_cleanup.rs  self_signed_cert.rs  sops_edit.rs  sops_key.rs  spotlight_sync.rs  ssm_bootstrap.rs  sweep.rs  watch.rs  webhook.rs  (+1 more)
src/reconverge/: engine.rs  legacy.rs  mod.rs  queue.rs  reconciler.rs  signal.rs  source.rs
src/reconverge/recipes/: build_spec_freshness.rs  containerd.rs  flake_lock_budget.rs  flux_git_auth.rs  kine_health.rs  mod.rs  rebuild_efficiency.rs
