[package]
name = "seibi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Infrastructure maintenance toolkit"
license = "MIT"
repository = "https://github.com/pleme-io/seibi"

[dependencies]
anyhow = "1"
nix = { version = "0.29", features = ["user"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "signal"] }
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0.18"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
