[package]
name = "seibi"
version = "0.2.0"
edition = "2024"
rust-version = "1.89.0"
description = "Infrastructure maintenance toolkit"
license = "MIT"
repository = "https://github.com/pleme-io/seibi"

[dependencies]
anyhow = "1"
nix = { version = "0.29", features = ["user"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# app-sync: typed read/write of the binary Dock plist (com.apple.dock) and
# percent-encoding for _CFURLString file URLs.
plist = "1"
percent-encoding = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "signal"] }
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0.18"
# K3s PKI generation (pki-bootstrap subcommand). Pure-Rust; no openssl/step-cli.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

# reconverge engine — typed event+poll convergence runtime. Sources emit
# ReconvergeSignals into a coalescing queue dispatched to Reconcilers; each
# dispatch is a fresh shigoto Dag (the tend re-arm pattern). Consumes the
# canonical convergence vocabulary; reuses the shigoto scheduler/FSM verbatim.
shigoto-types = { git = "https://github.com/pleme-io/shigoto" }
shigoto-scheduler = { git = "https://github.com/pleme-io/shigoto" }
shigoto-dag = { git = "https://github.com/pleme-io/shigoto" }
shigoto-retry = { git = "https://github.com/pleme-io/shigoto" }
shigoto-emit = { git = "https://github.com/pleme-io/shigoto" }
convergence-trait = { git = "https://github.com/pleme-io/convergence-trait" }
async-trait = "0.1"
blake3 = "1"
tokio-util = "0.7"
# rebuild-efficiency reconcilers: SHA-256 of Cargo.lock — the SAME freshness
# key gen embeds as `cargo_lock_sha256` (gen-cargo::build_spec::hash_cargo_lock).
# Both sides compute `format!("{:x}", Sha256::digest(bytes))` so freshness
# never drifts between gen, substrate's IFD gate, and this guard.
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
